--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
-    "nodemailer": "^6.7.5"
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.5",
+    "redis": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
